--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -5,9 +5,12 @@
       = pluralize(@pin.errors.count, "error")
       prevented this Pin from saving
       %ul
-        - @pin.errors.full_messsages.each do |msg|
+        - @pin.errors.full_messages.each do |msg|
           %li= msg
-          
+                    
+  .form-group
+    = f.input :image, input_html: { class: 'form-control' }
+
   .form-group
     = f.input :title, input_html: { class: 'form-control' }
 
